@@ -1,3 +1,7 @@
+2019-10-30  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/cpp0x/Wpessimizing-move6.C: New test.
+
 2019-10-30  Bernd Edlinger  <bernd.edlinger@hotmail.de>
 
 	PR c++/92024
