@@ -1,3 +1,8 @@
+2019-10-30  Jakub Jelinek  <jakub@redhat.com>
+
+	* typeck.c (decl_in_std_namespace_p): Return true also for decls
+	in inline namespaces inside of std namespace.
+
 2019-10-30  Bernd Edlinger  <bernd.edlinger@hotmail.de>
 
 	PR c++/92024
